implementation of the ManyToOne association between CardModel and TypeCard

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.jpa.show-sql=true
 
 spring.jpa.generate-ddl: true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+#select * from BD_banking.tb_account;
+#select * from BD_banking.tb_card;
+#select * from BD_banking.tb_type_card;
+#drop table BD_banking.tb_account;
+#drop table BD_banking.tb_card;
+#drop table BD_banking.tb_type_card;
