--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 #Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=none
 
-spring.datasource.url=jdbc:mysql://localhost:3306/BD_banking?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
-spring.datasource.username=root
-spring.datasource.password=root
+	spring.datasource.url=jdbc:mysql://localhost:3306/BD_banking?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+	spring.datasource.username=root
+	spring.datasource.password=root
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
@@ -23,3 +23,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #drop table BD_banking.tb_account;
 #drop table BD_banking.tb_card;
 #drop table BD_banking.tb_type_card;
+
+
+#spring.datasource.url=jdbc:mysql://it-experts.cux4qaxxhi0e.us-east-1.rds.amazonaws.com:3306/itexperts?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+#spring.datasource.username=root
+#spring.datasource.password=rootroot
