--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,30 @@
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
+	spring.jpa.hibernate.ddl-auto=update
 
 #Hibernate ddl auto (create, create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto=none
 
+#BD_MySql
 	spring.datasource.url=jdbc:mysql://localhost:3306/BD_banking?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 	spring.datasource.username=root
 	spring.datasource.password=root
 
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
+#Dialeto
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+	
+#BD_AWS
+#spring.datasource.username=root
+#spring.datasource.password=rootroot
 
-spring.jpa.generate-ddl: true
+#	spring.datasource.url=jdbc:mysql://banking-system.c13poqgk7bdd.us-east-1.rds.amazonaws.com:3306/bankingsystem?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+#	spring.datasource.username=root
+#	spring.datasource.password=rootroot
+#	server.port=5000
+
+	spring.jpa.properties.hibernate.format_sql=true
+	spring.jpa.show-sql=true
+	
+	spring.jpa.generate-ddl: true
 
 
 
@@ -22,7 +35,3 @@ spring.jpa.generate-ddl: true
 #drop table BD_banking.tb_card;
 #drop table BD_banking.tb_type_card;
 
-
-#spring.datasource.url=jdbc:mysql://it-experts.cux4qaxxhi0e.us-east-1.rds.amazonaws.com:3306/itexperts?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
-#spring.datasource.username=root
-#spring.datasource.password=rootroot
