--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,18 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=none
 
 #BD_MySql
-	spring.datasource.url=jdbc:mysql://localhost:3306/BD_banking?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
-	spring.datasource.username=root
-	spring.datasource.password=root
+#	spring.datasource.url=jdbc:mysql://localhost:3306/BD_banking?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+#	spring.datasource.username=root
+#	spring.datasource.password=root
+
+spring.datasource.url=jdbc:mysql://banking-system.c13poqgk7bdd.us-east-1.rds.amazonaws.com:3306/bankingsystem?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+spring.datasource.username=root
+spring.datasource.password=rootroot
+server.port=5000
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl: true
 
 #Dialeto
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -15,17 +24,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 #BD_AWS
 #spring.datasource.username=root
 #spring.datasource.password=rootroot
-
-#	spring.datasource.url=jdbc:mysql://banking-system.c13poqgk7bdd.us-east-1.rds.amazonaws.com:3306/bankingsystem?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
-#	spring.datasource.username=root
-#	spring.datasource.password=rootroot
-#	server.port=5000
-
-	spring.jpa.properties.hibernate.format_sql=true
-	spring.jpa.show-sql=true
-	
-	spring.jpa.generate-ddl: true
-
 
 
 #select * from BD_banking.tb_account;
