--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>bancking_system_api</finalName>
+		<finalName>banking_system_api</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
