--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,3 +1,4 @@
+
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
 
@@ -8,6 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 	spring.datasource.url=jdbc:mysql://localhost:3306/BD_banking?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 	spring.datasource.username=root
 	spring.datasource.password=root
+	server.port=8080
 
 
 spring.jpa.properties.hibernate.format_sql=true
